# ISRO-Hackathon-2024

./: .env  .gitignore  AWiFS-Tile-Orthorectification.txt  README.md  __init__.py  agent_page.py  answer.schema.json  app.py  asr_tts.py  database_info.csv  gm.txt  map_display.py  newtemp.py  pyproject.toml  requirements.txt  system_prompt.txt  temp.py
GeoAwareGPT/: ToolHandler.py  __init__.py  agents.py  logger.py
GeoAwareGPT/schema/: __init__.py  azure_schema.py  schema.py
GeoAwareGPT/tools/RAG_Tool/: knowledge_base.py
GeoAwareGPT/tools/azure_integration/: __init__.py  find_distance.py  geocode.py  geodecode.py  get_sat_maps.py  satellite_image.py  search_poi.py  weather.py
GeoAwareGPT/tools/custom_analytics/: econometric_kpi.py
GeoAwareGPT/tools/database_integration/: __init__.py  fetch_coords - Copy.py  fetch_coords.py  get_landuse_data.py  get_railway_length.py  sql_bot.py
GeoAwareGPT/tools/google_maps_integration/: googlemaps.py
GeoAwareGPT/tools/image_segment/: __init__.py  logger.py  segment.py
schema/: base.py
tests/: azure_speech.py  conftest.py  curse.py  cursed.txt  example_input.csv  get_sat_maps.py  image-object-detection-mask-generation-online-endpoint.ipynb  local_endpoint.ipynb  mask-generation-online-endpoint.ipynb  regex.py  sample_poi.json  sample_poi_rest_api.json  satellite.py  sql_gen_test.py  st_fci.py  test_gemini.py  test_image_segment.py  test_rag_tool.py  test_weather.py
tests/data/documents/: best_conditions_for_crops.txt  page_1.txt  page_10.txt  page_11.txt  page_12.txt  page_14.txt  page_2.txt  page_3.txt  page_4.txt  page_5.txt  page_6.txt  page_7.txt  page_8.txt  page_9.txt  pdf2txt.py
tests/sentinel/: 03-Accessing_Satellite_Imagery_Using Python.ipynb  quickstart.ipynb  st_pystac.ipynb
tools/image_segment/: logger.py  segment.py
