[tool.poetry]
name = "geoawaregpt"
version = "0.1.0"
description = "package created for isro hackathon"
authors = ["TensorTeen <varsity368@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
litellm = "^1.41.24"
pytest = "^8.2.2"
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"
segment-geospatial = "^0.10.6"
u

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
